# wastelessia

./: .gitignore  PRD.md  README.md  pyproject.toml
backend/: README.md  docker-compose.yml  e2e.sh  requirements.txt  schema.sql  seed.sql
backend/app/: db.py  deps.py  main.py  repository.py  routes.py  schemas.py
backend/tests/: test_events.py
examples/: demo_claude.py
sdk-js/: README.md  package-lock.json  package.json  tsconfig.json
sdk-js/src/: config.ts  index.ts  pricing.ts  sender.ts  track.ts  types.ts
sdk-js/test/: track.test.ts
src/wastelessia/: __init__.py  _config.py  _pricing.py  _sender.py  track.py
tests/: test_track.py
